--- a/О нас.html
+++ b/О нас.html
@@ -27,7 +27,7 @@
 
             <div class='nav'>
                 <a class='nav-item' href="@">ГЛАВНАЯ</a>
-                <a class='nav-item' href="C:\Users\HP\Desktop\Dana web\front fınal\bakery.html">О НАС</a>
+                <a class='nav-item' href="C:\Users\HP\Desktop\Dana web\front fınal\О нас.html">О НАС</a>
                 <a class='nav-item' href="@">ГАЛЕРЕЯ</a>
                 <a class='nav-item' href="@">МЕНЮ</a>
                 <a class='nav-item' href="@">РЕЦЕПТ</a>
