--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          <h3>Pineapple cake</h3>
       </div>
 
-      <div class="image" data-title="">
+      <div class="image" data-title="Blackberries cake">
          <img src="https://rare-gallery.com/uploads/posts/782090-Chocolate-Blueberries-Cakes-Blackberry.jpg" alt="">
          <h3>Blackberries cake</h3>
       </div>
