--- a/Order a cake.html
+++ b/Order a cake.html
@@ -172,8 +172,8 @@
                                 </div>
                             </div>
                             <div class="col-md-12 mt-3">
-                                <div class="form-group text-center">
-                                    <input type="submit" value="Order " class="btn btn-primary py-3 px-5">
+                                 <div>
+                                    <button type="submit" name="submit" style="background: #c8a97e; border: 1px solid #c8a97e; color: #ffffff; margin-left: 40%;">Order</button>
                                 </div>
                             </div>
                         </div>
